# String_C

./: CMakeLists.txt  main.c
lib/src/: library.c  library.h
tests/: test.c  test.h
